src/test/deca/extension/codegen/invalid/result/test_access_invalid_2d_output_no_check.res
  ** IMA ** ERREUR ** Ligne 39 : 
    STORE : Pas une adresse memoire
